--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,4 @@ eureka.client.serviceUrl.defaultZone = 	http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
 microservices.sos-service.endpoints.endpoint.uri = http://sales-order-service/sos/subscribe
-microservices.item-service.endpoints.endpoint.uri = http://localhost:8082/item-service/items
+microservices.item-service.endpoints.endpoint.uri = http://item-service/item-service/items
